--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@gsap/react": "^2.1.0",
+    "@gsap/react": "^2.1.2",
     "@react-three/drei": "^9.101.0",
     "@react-three/fiber": "^8.15.19",
     "@sentry/react": "^7.106.0",
     "@sentry/vite-plugin": "^2.14.3",
-    "gsap": "^3.12.5",
+    "gsap": "^3.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.162.0"
+    "react-router-dom": "^7.6.0",
+    "three": "^0.162.0",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
