--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.0",
+    "react-spinners": "^0.17.0",
     "three": "^0.162.0",
     "zustand": "^5.0.4"
   },
