--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/fiber": "^8.15.19",
     "@sentry/react": "^7.106.0",
     "@sentry/vite-plugin": "^2.14.3",
+    "axios": "^1.10.0",
     "gsap": "^3.13.0",
     "lodash.isequal": "^4.5.0",
     "react": "^18.2.0",
